--- a/Customer_segmentation.ipynb
+++ b/Customer_segmentation.ipynb
@@ -107,7 +107,51 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "kmeans = KMeans(n_clusters=5, init='k-means++', random_state=0)\n",
+    "\n",
+    "# return a label for each data point based on their cluster\n",
+    "Y = kmeans.fit_predict(X)\n",
+    "\n",
+    "print(Y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plotting all the clusters and their Centroids\n",
+    "\n",
+    "plt.figure(figsize=(8,8))\n",
+    "plt.scatter(X[Y==0,0], X[Y==0,1], s=50, c='green', label='Cluster 1')\n",
+    "plt.scatter(X[Y==1,0], X[Y==1,1], s=50, c='red', label='Cluster 2')\n",
+    "plt.scatter(X[Y==2,0], X[Y==2,1], s=50, c='yellow', label='Cluster 3')\n",
+    "plt.scatter(X[Y==3,0], X[Y==3,1], s=50, c='violet', label='Cluster 4')\n",
+    "plt.scatter(X[Y==4,0], X[Y==4,1], s=50, c='blue', label='Cluster 5')\n",
+    "\n",
+    "# plot the centroids\n",
+    "plt.scatter(kmeans.cluster_centers_[:,0], kmeans.cluster_centers_[:,1], s=100, c='cyan', label='Centroids')\n",
+    "\n",
+    "plt.title('Customer Groups')\n",
+    "plt.xlabel('Annual Income')\n",
+    "plt.ylabel('Spending Score')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "K-Means algorithm generated the following 5 clusters:\n",
+    "\n",
+    "1.clients with low annual income and high spending score\n",
+    "2.clients with medium annual income and medium spending score\n",
+    "3.clients with high annual income and low spending score\n",
+    "4.clients with high annual income and high spending score\n",
+    "5.clients with low annual income and low spending score"
+   ]
   }
  ],
  "metadata": {
